[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "value-fetcher"
version = "1.0.3"
description = "Fetch a value from various sources, e.g AWS Secrets Manager and SSM Parameter Store"
keywords = ["parameters", "secrets", "configuration", "values"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"

authors = [{ name = "Voquis Limited", email = "opensource@voquis.com" }]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = ["boto3"]

[project.optional-dependencies]
dev = [
  'black',
  'build',
  'flake8',
  'moto',
  'pylint',
  'pytest',
  'pytest-cov',
  'twine'
]

[project.urls]
Homepage = "https://github.com/voquis/value-fetcher"
Issues = "https://github.com/voquis/value-fetcher/issues"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
